--- a/module/project/test/ui/yaml/account.yaml
+++ b/module/project/test/ui/yaml/account.yaml
@@ -22,3 +22,5 @@ fields:
     range: "e10adc3949ba59abbe56e057f20f883e"
   - field: mobile
     range: "``"
+  - field: visions
+    range: "`rnd,lite`"
