--- a/module/projectrelease/test/ui/yaml/product.yaml
+++ b/module/projectrelease/test/ui/yaml/product.yaml
@@ -17,3 +17,23 @@ fields:
   - field: type
     note: "产品类型"
     range: normal
+  - field: status
+    note: "状态"
+    range: normal
+  - field: subStatus
+    note: "子状态"
+    range: ''
+  - field: PMT
+    note: "产品管理团队"
+    range: ''
+  - field: PO
+    note: "产品负责人"
+    range: admin
+  - field: acl
+    note: "访问控制"
+    range: open
+  - field: createdBy
+    note: "创建者"
+    range: admin
+  - field: createdDate
+    note: "创建日期"
