--- a/module/projectrelease/test/ui/yaml/product.yaml
+++ b/module/projectrelease/test/ui/yaml/product.yaml
@@ -37,3 +37,9 @@ fields:
     range: admin
   - field: createdDate
     note: "创建日期"
+    range: "-:60"
+    type: timestamp
+    format: "YYYY-MM-DD hh:mm:ss"
+  - field: deleted
+    note: "是否删除"
+    range: 0
