--- a/misc/ci/Jenkinsfile
+++ b/misc/ci/Jenkinsfile
@@ -1,5 +1,5 @@
-library 'z-common@master'
-library 'z-zentaopms@feat-240801'
+library 'z-common@main'
+library 'z-zentaopms@feat-241030'
 
 pipeline {
   agent {
@@ -320,7 +320,7 @@ pipeline {
                     steps {
                       sh 'mkdir ${OUTPUT_PKG_PATH}/${ZT_PMS_MAIN_VERSION}'
                       sh 'cp ${ZENTAO_RELEASE_PATH}/base.zip ${OUTPUT_PKG_PATH}/${ZT_PMS_MAIN_VERSION}/${ARTIFACT_NAME}-${PMS_VERSION}-${PHPVERSION}.zip'
-                      sh 'cp ${ZENTAO_RELEASE_PATH}/base.tar.xz ${OUTPUT_PKG_PATH}/${ZT_PMS_MAIN_VERSION}/${ARTIFACT_NAME}-${PMS_VERSION}-${PHPVERSION}.tar.xz'
+                      // sh 'cp ${ZENTAO_RELEASE_PATH}/base.tar.xz ${OUTPUT_PKG_PATH}/${ZT_PMS_MAIN_VERSION}/${ARTIFACT_NAME}-${PMS_VERSION}-${PHPVERSION}.tar.xz'
 
                       script {
                         buildPkg.uploadPMS(env.PHPVERSION)
