+ [refac] add files which need to be reviewed.

--- a/.gitfox/CODEOWNERS
+++ b/.gitfox/CODEOWNERS
@@ -1,3 +1,5 @@
+config/cache.php liugang@easycorp.ltd zhujinyong@easycorp.ltd
 framework/** liugang@easycorp.ltd zhujinyong@easycorp.ltd
 lib/base/** liugang@easycorp.ltd zhujinyong@easycorp.ltd
+lib/cache/** liugang@easycorp.ltd zhujinyong@easycorp.ltd
 CODEOWNERS liugang@easycorp.ltd zhujinyong@easycorp.ltd qishiyao@easycorp.ltd
